Fixed login page height cutoff issue Added background image for CS page

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -6,18 +6,15 @@
     border-collapse: collapse;
 }
 
-.panel-body
-{
-    overflow-y: scroll;
-    /*height: 250px;*/
-    height: 80vh;
+.box-header.with-border{
+    height: 41px;
 }
 
 .box-body
 {
     overflow-y: scroll;
     /*height: 250px;*/
-   height: 75vh;
+   height: 80vh;
 
 }
 
@@ -29,6 +26,7 @@
    /*height: 75vh;*/
 
 }
+
 
 #chat-page
 {
