--- a/src/app/history/history.component.css
+++ b/src/app/history/history.component.css
@@ -6,18 +6,15 @@
     border-collapse: collapse;
 }
 
-.panel-body
-{
-    overflow-y: scroll;
-    /*height: 250px;*/
-    height: 80vh;
+.box-header.with-border{
+    height: 41px;
 }
 
 .box-body
 {
     overflow-y: scroll;
     /*height: 250px;*/
-   height: 80vh;
+   height: 85vh;
 
 }
 
