--- a/src/app/opchat/opchat.component.css
+++ b/src/app/opchat/opchat.component.css
@@ -6,18 +6,15 @@
     border-collapse: collapse;
 }
 
-.panel-body
-{
-    overflow-y: scroll;
-    /*height: 250px;*/
-    height: 75vh;
+.box-header.with-border{
+    height: 41px;
 }
 
 .box-body
 {
     overflow-y: scroll;
     /*height: 250px;*/
-   height: 75vh;
+   height: 80vh;
 
 }
 
