--- a/src/app/request/request.component.css
+++ b/src/app/request/request.component.css
@@ -1,3 +1,8 @@
+.content-wrapper{
+    min-height: 100%;
+    /*margin-bottom: -150px;*/
+}
+
 /*.panel .slidedown .glyphicon, .chat .glyphicon*/
 .box .panel .slidedown .glyphicon, .chat .glyphicon
 {
@@ -7,18 +12,14 @@
     border-collapse: collapse;
 }
 
-.panel-body
-{
-    overflow-y: scroll;
-    /*height: 250px;*/
-    height: 75vh;
-}
-
 .box-body
 {
     overflow-y: scroll;
+    /*overflow: auto;*/
+    /*display: block;*/
     /*height: 250px;*/
-   height: 80vh;
+   height: 85vh;
+   /*min-height: 100%;*/
 }
 
 .box.box-primary.direct-chat.direct-chat-primary
@@ -60,9 +61,9 @@
 {
     margin-left: 0;
     margin-right: 0;
-/*    width: 100%;
-    height: 100%;
-*/}
+    /*width: 100%;*/
+    min-height: 100%;
+}
 
 #content-wrapper
 {
